# ero

./: CMakeLists.txt  CTestTestfile.cmake  Copie of package.xml  Makefile  README.md  cmake_install.cmake  install_summit_pkg_on_remote_pc.sh  myGmapping.launch  myGmapping_real.launch  nav_test.py  package.xml  patrol.py  publishing-to-move_base_simplegoal  readme.txt  setup.py  summit_real_labor_whs.rviz  summit_xl_complete.launch  summit_xl_sim_control.yaml  whs_gazebo_patrol.py  whs_patrol.py  whs_summit_xl_real_bringup.launch
catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
catkin_generated/ARO_summit/: CMakeLists.txt
catkin_generated/installspace/: ARO_summit.pc  ARO_summitConfig.cmake
changed_summit_files/: summit_xl_one_robot.launch
changed_summit_files/30m Laserscanner UTM30LX/: hokuyo_utm30lx.urdf.xacro  readme_SS21.md  summit_xl_gazebo.launch  summit_xl_utm30lx.urdf.xacro
changed_summit_files/SS20/: hokuyo_ust10lx.readme  hokuyo_ust10lx.urdf.xacro
ero_gz_worlds/: CMakeLists.txt  package.xml  whs_world_ReadMe.md
ero_gz_worlds/launch/: empty_sky_world.launch  start_teleop.sh  summit_xl_in_empty_world.launch  whs_summit_xl_4mapping.launch  whs_summit_xl_4mapping_imu.launch  whs_summit_xl_complete (Kopie).launch  whs_summit_xl_complete (noch eine Kopie).launch  whs_summit_xl_complete.launch
ero_gz_worlds/whs_world/: model.config  model.sdf  readMe.txt  whs.world  whs_180Grad.world  whs_map.yaml  whs_world.world
ero_gz_worlds/whs_world_map/: whs.yaml
ero_gz_worlds/whs_world_model/: model.config  model.sdf
ero_install/: Dockin Station RobotnikAutomation  ROS_Noetic_Installation_auf_Remote_PC.sh  install_summit_pkg_on_noetic_remote_pc.sh  install_summit_pkg_on_remote_pc.sh
ero_maps/: heute.yaml  heute2.pgm  heute2.yaml  heute3.pgm  heute3.yaml  heute4.pgm  heute4.yaml  p5_whs_map.pgm  p5_whs_map.yaml
ero_python_ws/ero_P1_BMI/: BMI_2.py
ero_python_ws/ero_P2_turtle/: P2_moveTurtle_distance_LOESUNG.py  P2_moveTurtle_distance_VORGABE.py
ero_python_ws/ero_V1_sw/: global_and_local_Var.py
ero_rviz/: rviz_config_ero_ss20_summit_gazebo.rviz  rviz_config_ero_ss21_summit_gazebo.rviz  summit_navigation_rviz_SS21.rviz  summit_real_labor_whs_kineticFlores.rviz  summit_whs_imu_test.rviz  summit_whs_p5_mapping_SS21.rviz
ero_src/: install_summit_pkg_on_remote_pc.sh  myFirstScript.sh
ero_turtlesim/: CMakeLists.txt  ReadMe.txt  package.xml
nodes/ero_kap13_move_base_action/: sw01_file_read_write_demo.py  sw04_file_read_point_click.py  sw05_whs_gazebo_patrol_file.py
nodes/ero_noisy_odometrie_4_imu_test/: ero_noisy_odometrie_4_imu_test.py
nodes/ero_p1_bmi/: bmi.py  bmi2.py
nodes/ero_p2_turtle/: p2_moveSummit_distance_SS21.py  p2_moveTurtle_distance_LOESUNG_SS21.py
nodes/ero_p3_turtleOOP/: p3_TurtleClass_move2goal_P_SS21.py  p3_TurtleClass_move2goal_SS21.py  p3_TurtleClass_move2goal_VORGABE.py
nodes/ero_p4_turtle_pyQt/: P4_pyqt_Summit_Move_to_Goal_SS21.py  P4_pyqt_Turtle_Move_to_Goal_SS21.py  P4_pyqt_Turtle_Move_to_Goal_VORGABE.py  ROS_joy_and_turtlesim.py  SummitClassDef.py  TurtleBotClass_File.py  TurtleSimClassDef.py  pyqt_Turtle_Steering.py
nodes/ero_p5_gazebo_patrol/: Test_Read_File.py  ero_publish_point_2_file.py  path.txt  path2.txt  whs_gazebo_patrol.py  whs_gazebo_patrol_SS21.py  whs_gazebo_patrol_file_SS21.py  whs_gazebo_patrol_vorgabe.py
nodes/ero_p5_pyQt_soccer/: p5_GamePad_Summit.py
nodes/ero_v3_sw_oop/: class_kiste.py
nodes/ero_v4_sw_pyQt/: pyqt_sw03_hello_world_class.py  pyqt_sw07_LCD_Slider.py
nodes/ero_v5_sw_pyQt/: pyqt_sw12_QTimer.py  pyqt_sw22_GamePad.py  pyqt_sw22b_GamePad -ROS_joy_and_turtlesim.py
scripts/: Summit_XL_Laserscanner_view  Summit_XL_Laserscanner_view.m  Tetris.py  play_wavFile.py
scripts/ero_v1_sw/: hello_world.py
whs_real_summit/: CMakeLists.txt  README.md  package.xml
whs_real_summit/calibration/: depth_Astra_Orbbec.yaml  rgb_Astra_Orbbec.yaml
whs_real_summit/config/: rviz.rviz
whs_real_summit/installScript/: ROS_Melodic_install.sh  install_summit_pkg_on_remote_pc.sh
whs_real_summit/launch/: summit_amcl.launch  summit_bringup.launch  summit_complete.launch  summit_imu.launch  summit_move.launch  summit_sensors.launch  summit_slam.launch  summit_xl_state_robot.launch
whs_real_summit/maps/: ero_complete.yaml  labor_20200930.yaml  labor_20201001.pgm  labor_20201001.yaml  whs_outdoor.yaml  whs_outdoor_labor.yaml
whs_turtlesim/: CMakeLists.txt  package.xml
(+15 files in other folders)
